--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,30 +1,46 @@
 .header {
-    margin: 40px;
-    display: flex;
-    align-items: center;
     max-width: 1920px;
     min-height: 88px;
     background-color: #1C1C21;
-    padding: 24px 340px;
-    justify-content: space-between;
     position: relative;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1240px;
+}
+
+.link {
+    display: flex;
+    gap: 8px;
+    color: inherit;
+    text-decoration: inherit;
+}
+
+.link-inactive {
+    composes: link;
+    color: #8585AD;
 }
 
 .container {
     display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-
-.container_type_small {
-    composes: container;
     gap: 49px;
 }
 
 .logo {
-    margin: 0;
     position: absolute;
     left: 50%;
+    top: 50%;
     margin-right: -50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    width: 289.15px;
+    height: 40px;
 }
