--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -8,3 +8,8 @@
     grid-template-columns: repeat(auto-fit, min(272px));
     gap: 24px 32px;
 }
+
+.scroll {
+    height: 912px;
+    overflow-y: scroll;
+}
