--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -41,6 +41,9 @@
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
+}
+
+.logo svg {
     width: 289.15px;
     height: 40px;
 }
