--- a/src/components/burger-ingredient/burger-ingredient.module.css
+++ b/src/components/burger-ingredient/burger-ingredient.module.css
@@ -14,6 +14,12 @@
     height: 120px;
 }
 
+.price-container {
+    display: flex;
+    gap: 9px;
+    
+}
+
 .counter {
     position: absolute;
     top: 0;
@@ -21,4 +27,5 @@
 
 .name {
     white-space: normal;
+    text-align: center;
 }
