--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -10,7 +10,6 @@
 }
 
 .modal-content {
-    height: 718px;
     width: 720px;
     border-radius: 40px;
     background-color: #1C1C21;
@@ -18,12 +17,15 @@
     position: relative;
     box-sizing: border-box;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.close-icon {
-    position: absolute;
-    top: 60px;
-    right: 40px;
+.header {
+    width: 640px;
+    height: 64px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
