--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -13,10 +13,12 @@
     display: flex;
     gap: 20px;
     padding: 0;
+    margin-top: 0;
 }
 
 .item {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 8px;
 }
