--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -10,3 +10,10 @@
   margin: 0;
   font-size: "1.5rem";
 }
+
+.preloader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
+}
