--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -11,9 +11,11 @@
     max-width: 320px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
-.form {
-    display: flex;
-    flex-direction: column;
+.logout-button {
+    color: #8585AD;
+    background: none;
+    border: none;
 }
