--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -6,6 +6,7 @@
 }
 
 .form {
-    display: "flex";
-    flex-direction: "column";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
