--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -1,9 +1,10 @@
 .profile-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 60px;
-    margin-top: 120px;
+    margin: 120px 380px 0;
+    max-width: 1240px;
 }
 
 .link-container {
