Подключение WS на страницу История заказов
- Данные на странице история заказов теперь отображаются корректно
- созданы экшены и редьюсеры для обработки мидлвари WS страницы История заказов
- рефакторинг

--- a/src/components/oders-history/orders-history.module.css
+++ b/src/components/oders-history/orders-history.module.css
@@ -1,6 +1,9 @@
-.wrapper {
+.list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
