--- a/src/components/feed/order-card/order-card.module.css
+++ b/src/components/feed/order-card/order-card.module.css
@@ -1,3 +1,33 @@
+.card {
+    background-color: #1C1C21;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 24px;
+}
+
+.number-date-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.image-price-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.price-wrapper {
+    display: flex;
+}
+
+
 .image {
     height: 64px;
     width: 64px;
