--- a/src/components/feed/order-card/order-card.module.css
+++ b/src/components/feed/order-card/order-card.module.css
@@ -1,6 +1,8 @@
 .card {
     background-color: #1C1C21;
     border-radius: 40px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06),
+        0px 0px 1px rgba(0, 0, 0, 0.04);
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -27,13 +29,30 @@
     display: flex;
 }
 
+.image-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
-.image {
+.image-wrapper {
     height: 64px;
     width: 64px;
-    border: 2px solid;
-    border-radius: 50%;
-    object-fit: cover;
+    background: linear-gradient(63.18deg, #801ab3 0%, #4c4cff 100%);
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: -16px;
+
 }
 
 
+.image {
+    height: 60px;
+    width: 60px;
+    border-radius: 100px;
+    object-fit: cover;
+    background-color: #131316;
+}
