--- a/src/components/feed/orders-list/orders-list.module.css
+++ b/src/components/feed/orders-list/orders-list.module.css
@@ -1,4 +1,15 @@
+.list-wrapper {
+    display: flex;
+    width: 608px;
+    height: 852px;
+    overflow: hidden;
+}
+
 .list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    overflow-y: scroll;
     list-style: none;
     margin: 0;
     padding: 0;
