--- a/src/components/feed/orders-status/orders-status.module.css
+++ b/src/components/feed/orders-status/orders-status.module.css
@@ -1,6 +1,7 @@
 .order-status-section {
     display: flex;
     flex-direction: column;
+    gap: 60px;
     width: 580px;
 }
 
@@ -18,6 +19,26 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    width: 272px;
+    height: 304px;
+    overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.list::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+.list::-webkit-scrollbar-thumb {
+    background: #8585AD;
+    border: 3px solid #2F2F37;
+    border-radius: 6px;
+}
+.list::-webkit-scrollbar-track {
+    background: #2F2F37;
 }
 
 .order-number-complite {
