Смена файловой структуры

--- a/src/components/feed/orders-status/orders-status.module.css
+++ b/src/components/feed/orders-status/orders-status.module.css
@@ -32,15 +32,21 @@
     width: 12px;
     height: 12px;
 }
+
 .list::-webkit-scrollbar-thumb {
     background: #8585AD;
     border: 3px solid #2F2F37;
     border-radius: 6px;
 }
+
 .list::-webkit-scrollbar-track {
     background: #2F2F37;
 }
 
 .order-number-complite {
     color: rgba(0, 204, 204, 1)
+}
+
+.orders-sum {
+    text-shadow: 0 0 16px rgba(51, 51, 255, .25), 4px 0 8px rgba(51, 51, 255, .25), 0 4px 32px rgba(51, 51, 255, .5);
 }
