--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,5 +1,5 @@
 .header {
-    max-width: 1920px;
+    width: 1920px;
     min-height: 88px;
     background-color: #1C1C21;
     position: relative;
