--- a/src/components/feed/orders-list/orders-list.module.css
+++ b/src/components/feed/orders-list/orders-list.module.css
@@ -2,7 +2,6 @@
     display: flex;
     width: 608px;
     height: 852px;
-    overflow: hidden;
 }
 
 .list {
@@ -13,4 +12,9 @@
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+.link {
+    color: inherit;
+    text-decoration: inherit;
 }
