--- a/src/components/order-card/order-card.module.css
+++ b/src/components/order-card/order-card.module.css
@@ -35,6 +35,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    z-index: 0;
 }
 
 .image-wrapper {
@@ -46,7 +47,7 @@
     align-items: center;
     justify-content: center;
     margin-right: -16px;
-
+    position: relative;
 }
 
 
@@ -56,4 +57,15 @@
     border-radius: 100px;
     object-fit: cover;
     background-color: #131316;
+}
+
+.counter {
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(19, 19, 22, 0.5);
 }
