--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 60px;
-    margin: 120px 380px 0;
+    margin: 0 380px;
     width: 1240px;
 }
 
